fix visible rect in scroll area, prototype scroll_to_rect with padding

--- a/widgem/themes/default/theme.css
+++ b/widgem/themes/default/theme.css
@@ -37,7 +37,6 @@ TextInput:focus {
 
 TextArea {
     border: 1px solid #c8c8c8;
-    border-radius: 2px;
     width: 10em;
     height: 6.2em;
     padding: 0;
